{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 13,
  "lineage": "28a2fc69-a2b5-c293-e686-e93e659bf4a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-test-env",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "react",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047bb4163c506cd98",
            "arn": "arn:aws:ec2:eu-west-1:898653426607:instance/i-0c6444788a35e0db1",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c6444788a35e0db1",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "jeremy-epsi-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-018a0868c80a47763",
            "private_dns": "ip-10-0-52-80.eu-west-1.compute.internal",
            "private_ip": "10.0.52.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ed96c0c3633569ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d4b281fef02dedd2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd835db111e8418a",
            "tags": {
              "Name": "react"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d4b281fef02dedd2"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-env-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02cee4d815101d794",
            "owner_id": "898653426607",
            "tags": {
              "Name": "test-env-gw"
            },
            "vpc_id": "vpc-0d6c11e19be2416d5"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0710d6c86c505eb14",
            "owner_id": "898653426607",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cee4d815101d794",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-env-route-table"
            },
            "vpc_id": "vpc-0d6c11e19be2416d5"
          },
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d753e852cd600638",
            "route_table_id": "rtb-0710d6c86c505eb14",
            "subnet_id": "subnet-0bd835db111e8418a"
          },
          "dependencies": [
            "aws_route_table.route-table-test-env",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898653426607:security-group/sg-0d4b281fef02dedd2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4b281fef02dedd2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": null,
            "owner_id": "898653426607",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6c11e19be2416d5"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898653426607:subnet/subnet-0bd835db111e8418a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0bd835db111e8418a",
            "map_public_ip_on_launch": false,
            "owner_id": "898653426607",
            "vpc_id": "vpc-0d6c11e19be2416d5"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-env",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:898653426607:vpc/vpc-0d6c11e19be2416d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2cdbc3dd3664ac0",
            "default_route_table_id": "rtb-04ef3b1b9f561910c",
            "default_security_group_id": "sg-0a2a72f34bf0b5ffc",
            "dhcp_options_id": "dopt-c383fda5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d6c11e19be2416d5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04ef3b1b9f561910c",
            "owner_id": "898653426607",
            "tags": {
              "Name": "test-env"
            }
          }
        }
      ]
    }
  ]
}